find epics base

--- a/config/config.properties
+++ b/config/config.properties
@@ -1,5 +1,7 @@
 java.include= ${java.home}/../include
 
+epics.base= /usr/epics/base
+install.dir= ${epics.base}
 epics.base.bin= ${epics.base}/bin/${arch}
 epics.base.lib= ${epics.base}/lib/${arch}
 
