don't link unneeded libraries

--- a/config/build.linux-x86.properties
+++ b/config/build.linux-x86.properties
@@ -17,7 +17,7 @@ jni.lib.name=lib${jca}.so
 
 jni.lib.cmd=g++
 jni.lib.cmd.args=-shared \
-	-L${epics.base}/lib/linux-x86 -lca -lCom -lpthread -lreadline -lncurses -lm -lrt \
+	-L${epics.base}/lib/linux-x86 -lca -lCom \
 	-o ${@target} ${@src}
 
 
