Imported Upstream version 2.3.5

--- a/config/build.darwin-x86.properties
+++ b/config/build.darwin-x86.properties
@@ -6,7 +6,7 @@ jni.objs.cmd=g++
 jni.objs.cmd.args=-c \
 	-DOSITHREAD_USE_DEFAULT_STACK \
 	-DUNIX \
-	-ansi  -O3  -Wall \
+	-ansi  -O3  -Wall -arch i386 \
 	-I${java.home}/include \
 	-I${java.include} -I${java.include}/darwin \
 	-I${epics.base}/include -I${epics.base}/include/os/Darwin \
