--- a/config/config.properties
+++ b/config/config.properties
@@ -1,6 +1,6 @@
 java.include= ${java.home}/../include
 
-epics.base= /usr/epics/base
+epics.base= /usr/lib/epics
 install.dir= ${epics.base}
 epics.base.bin= ${epics.base}/bin/${arch}
 epics.base.lib= ${epics.base}/lib/${arch}
