--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Michael Davidsaver <mdavidsaver@bnl.gov>
 Build-Depends: debhelper (>= 7.0.50~), javahelper (>= 0.32~),
                epics-dev,
                openjdk-6-jdk, openjdk-6-doc, ant,
-               ant-optional
+               ant-optional, libcommons-cli-java,
 Standards-Version: 3.9.0
 Homepage: http://epics-jca.sourceforge.net/
 
