--- a/debian/rules
+++ b/debian/rules
@@ -4,7 +4,7 @@ export DH_VERBOSE=1
 
 EPICS_HOST_ARCH:=$(shell /usr/lib/epics/startup/EpicsHostArch)
 
-export JAVA_HOME := /usr/lib/jvm/java-6-openjdk-$(shell dpkg-architecture -qDEB_BUILD_ARCH)
+export JAVA_HOME := /usr/lib/jvm/default-java
 export CLASSPATH=
 
 %:
